--- a/style.css
+++ b/style.css
@@ -1,13 +1,29 @@
 body {
   margin: 0;
   overflow: hidden;
+  font-family: sans-serif;
+  background: black;
 }
 
-video, canvas {
+.container {
+  position: relative;
+  width: 100vw;
+  height: 100vh;
+  overflow: hidden;
+}
+
+video {
   position: absolute;
-  top: 0;
-  left: 0;
   width: 100%;
   height: 100%;
   object-fit: cover;
+  z-index: 1;
+}
+
+model-viewer {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  z-index: 2;
+  display: none; /* Start hidden */
 }
